added readme file

--- a/index.html
+++ b/index.html
@@ -16,12 +16,115 @@
   </head>
   <body>
     <div class="page">
-      <header class="header"></header>
+      <header class="header">
+        <img src="./images/logo.svg" alt="spots logo" class="header__logo" />
+      </header>
       <main class="content">
-        <section class="profile"></section>
-        <section class="cards"></section>
+        <section class="profile page__section">
+          <img
+            src="./images/spots-images/spots-images/avatar.jpg"
+            alt="profile avatar"
+            class="profile__avi"
+          />
+          <div class="profile__column">
+            <h1 class="profile__name">Bessie Coleman</h1>
+            <p class="profile__description">Civil Aviator</p>
+            <button type="button" class="profile__edit-but">
+              <img src="./images/edit-icon.svg" alt="edit pencil" />Edit Profile
+            </button>
+          </div>
+          <button type="button" class="profile__add-but">
+            <img src="./images/plus-icon.svg" alt="plus icon" />New Post
+          </button>
+        </section>
+        <section class="cards page__section">
+          <ul class="cards__list">
+            <li class="card">
+              <img
+                src="./images/spots-images/spots-images/1-photo-by-moritz-feldmann-from-pexels.jpg"
+                alt="Val Thorens"
+                class="card__image"
+              />
+              <div class="card__content">
+                <h2 class="card__title">Val Thorens</h2>
+                <button type="button" class="card__like-button">
+                  <img src="./images/corazon.svg" alt="like button" />
+                </button>
+              </div>
+            </li>
+            <li class="card">
+              <img
+                src="./images/spots-images/spots-images/2-photo-by-ceiline-from-pexels.jpg"
+                alt="Restaurant Terrance"
+                class="card__image"
+              />
+              <div class="card__content">
+                <h2 class="card__title">Restaurant Terrance</h2>
+                <button type="button" class="card__like-button">
+                  <img src="./images/corazon.svg" alt="like button" />
+                </button>
+              </div>
+            </li>
+            <li class="card">
+              <img
+                src="./images/spots-images/spots-images/3-photo-by-tubanur-dogan-from-pexels.jpg"
+                alt="Outdoor Cafe"
+                class="card__image"
+              />
+              <div class="card__content">
+                <h2 class="card__title">An outdoor cafe</h2>
+                <button type="button" class="card__like-button">
+                  <img src="./images/corazon.svg" alt="like button" />
+                </button>
+              </div>
+            </li>
+            <li class="card">
+              <img
+                src="./images/spots-images/spots-images/4-photo-by-maurice-laschet-from-pexels.jpg"
+                alt="long bridge over forest"
+                class="card__image"
+              />
+              <div class="card__content">
+                <h2 class="card__title">
+                  A very long bridge, over the forest&hellip;
+                </h2>
+                <button type="button" class="card__like-button">
+                  <img src="./images/corazon.svg" alt="like button" />
+                </button>
+              </div>
+            </li>
+            <li class="card">
+              <img
+                src="./images/spots-images/spots-images/5-photo-by-van-anh-nguyen-from-pexels.jpg"
+                alt="Tunnel"
+                class="card__image"
+              />
+              <div class="card__content">
+                <h2 class="card__title">Tunnel with morning light</h2>
+                <button type="button" class="card__like-button">
+                  <img src="./images/corazon.svg" alt="like button" />
+                </button>
+              </div>
+            </li>
+            <li class="card">
+              <img
+                src="./images/spots-images/spots-images/6-photo-by-moritz-feldmann-from-pexels.jpg"
+                alt="Mountain House"
+                class="card__image"
+              />
+              <div class="card__content">
+                <h2 class="card__title">Mountain house</h2>
+                <button type="button" class="card__like-button">
+                  <img src="./images/corazon.svg" alt="like button" />
+                </button>
+              </div>
+            </li>
+          </ul>
+        </section>
       </main>
-      <footer class="footer"></footer>
+      <footer class="footer">
+        <p class="footer__title">2025 &copy; Spots</p>
+      </footer>
     </div>
   </body>
 </html>
