Final updates for my project

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
               />
               <div class="card__content">
                 <h2 class="card__title">
-                  A very long bridge, over the forest&hellip;
+                  A very long bridge, over the forest to my house
                 </h2>
                 <button type="button" class="card__like-button">
                   <img src="./images/corazon.svg" alt="like button" />
