Made and created modals

--- a/index.html
+++ b/index.html
@@ -125,6 +125,60 @@
       <footer class="footer">
         <p class="footer__title">2025 &copy; Spots</p>
       </footer>
+      <div class="modal">
+        <div class="modal__container">
+          <button type="button" class="modal__close-button">
+            <img src="./images/close-icon.svg" alt="close-icon" />
+          </button>
+          <h2 class="modal__title">Edit Profile</h2>
+          <form class="modal__form">
+            <label for="profile-name-input" class="modal__label">Name</label>
+            <input
+              type="text"
+              class="modal__input"
+              id="profile-name-input"
+              placeholder="Type your name"
+            />
+            <label for="profile-description-input" class="modal__label"
+              >Description</label
+            >
+            <input
+              type="text"
+              class="modal__input"
+              id="profile-description-input"
+              placeholder="Describe Yourself"
+            />
+            <button type="submit" class="modal__save-button">Save</button>
+          </form>
+        </div>
+      </div>
+      <div class="modal modal_is-opened">
+        <div class="modal__container">
+          <button type="button" class="modal__close-button">
+            <img src="./images/close-icon.svg" alt="close-icon" />
+          </button>
+          <h2 class="modal__title">New post</h2>
+          <form class="modal__form">
+            <label for="card-image-input" class="modal__label"
+              >Image link</label
+            >
+            <input
+              type="url"
+              class="modal__input"
+              id="card-image-input"
+              placeholder="Paste a link to the picture"
+            />
+            <label for="caption-input" class="modal__label">Caption</label>
+            <input
+              type="text"
+              class="modal__input"
+              id="caption-input"
+              placeholder="Type your caption"
+            />
+            <button type="submit" class="modal__save-button">Save</button>
+          </form>
+        </div>
+      </div>
     </div>
   </body>
 </html>
