--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
       <footer class="footer">
         <p class="footer__title">2025 &copy; Spots</p>
       </footer>
-      <div class="modal">
+      <div class="modal" id="edit-profile-modal">
         <div class="modal__container">
           <button type="button" class="modal__close-button">
             <img src="./images/close-icon.svg" alt="close-icon" />
@@ -152,7 +152,7 @@
           </form>
         </div>
       </div>
-      <div class="modal modal_is-opened">
+      <div class="modal" id="new-post-modal">
         <div class="modal__container">
           <button type="button" class="modal__close-button">
             <img src="./images/close-icon.svg" alt="close-icon" />
@@ -180,5 +180,6 @@
         </div>
       </div>
     </div>
+    <script src="./scripts/index.js"></script>
   </body>
 </html>
